package Praktikum.Sesi10.InheritanceBangunDatar;

public class Lingkaran extends BangunDatar{
    // jari-jari lingkaran
    float r;
}
