package Praktikum.Sesi10.InheritanceBangunDatar;

public class Persegi extends BangunDatar{
    float sisi;
}
