package Praktikum.Sesi10.InheritanceBangunDatar;

public class PersegiPanjang extends BangunDatar {
    float panjang;
    float lebar;
}
