package Praktikum.Sesi10.InheritanceBangunDatar;

public class Segitiga extends BangunDatar{
    float alas;
    float tinggi;
}
